Fix: jdk 17 hilos virtual